# dox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  add_resolver.cc  add_resolver.h  build.sh  defaultResolvers.json  defaultSurvey.json  dns.cc  dns.h  dns_dot.cc  dns_dot.h  dns_https_get.cc  dns_https_get.h  dns_https_post.cc  dns_https_post.h  dns_system.cc  dns_system.h  dns_udp.cc  dns_udp.h  dnswire.cc  dnswire.h  main.cc  mainwindow.cc  mainwindow.h  network_manager.cc  network_manager.h  ping.cc  ping.h  query.cc  query.h  resolvers.cc  resolvers.h  resources.qrc  survey.cc  survey.h  survey_data.cc  survey_data.h  (+1 more)
cmake/: FindLDns.cmake
icons/: README  buildicons.sh
package/: DoxComponent.plist  README  deploy.sh  dox.wxs  package-darwin.sh  package-windows.sh  remove-exe.xslt
